--- a/vikbooking/admin/resources/vikbooking.css
+++ b/vikbooking/admin/resources/vikbooking.css
@@ -1093,7 +1093,7 @@ td.roomname {
 	text-align: left;
 }
 td.roomname.subroomname {
-	background: var(--vbo-config-bg-color) !important;
+	background: var(--vbo-config-bg-color);
 }
 .vbo-overview-room-info {
 	display: flex;
@@ -1492,7 +1492,7 @@ p.vbpfiltconfnumb {
 	z-index: 10;
 	background-clip: padding-box !important;
 }
-.vbo-overv-sticky-table-head-off .vboverviewtablerow td:first-child, .vbo-tm-row td:first-child, .vbo-roomrates-cell-first {
+.vbo-tm-row td:first-child, .vbo-roomrates-cell-first {
 	background-color: var(--vbo-table-light-grey);
 }
 .vboverviewtablerow {
@@ -2429,6 +2429,9 @@ p.vbroomparamp span {
 	display: inline-block;
 	vertical-align: middle;
 	margin-right: 5px;
+}
+.vbo-menu-updates button.vbo-help-wizard-handler i {
+	font-size: 24px;
 }
 .vbo-menu-updates button.vbo-multitasking-apps i {
 	margin-right: 0;
@@ -9271,9 +9274,11 @@ a.vbo-info-overlay-close {
 	cursor: move;
 }
 .vbo-dragging-sp {
-	border-radius: 8px;
-	border: 1px dashed var(--vbo-config-title-color);
-	background: rgba(0, 0, 0, 0.4) none repeat scroll 0 0;
+	border-radius: 12px;
+	border: 1.2px dashed var(--vbo-config-title-color);
+	background: rgba(129, 178, 242, 0.4) none repeat scroll 0 0;
+	border-color: var(--vbo-blue-color);
+	padding-left: 5px;
 }
 .vbo-tableaux-booking-checkin.vbo-dragging-sp {
 	border-right: 0;
@@ -9386,6 +9391,27 @@ table.vboverviewtable th, table.vboverviewtable td {
 	box-sizing: border-box;
 	border-right: 1px solid var(--vbo-config-border-color);
 	border-top: 1px solid var(--vbo-basic-btn-focus);
+}
+.vbo-roverview-table .vboverviewtablerow-subunit-tmp td:first-child, table.vboverviewtable .vboverviewtablerow-subunit-tmp td {
+	background: var(--vbo-light-blue);
+	border-top: 2px dashed var(--vbo-basic-btn-focus);
+	padding-bottom: 8px;
+}
+.vbo-roverview-table .vboverviewtablerow-subunit-unassigned td:first-child, .vbo-roverview-table .vboverviewtablerow-subunit-unassigned td.vbo-overv-avcell {
+	background-color: var(--vbo-warning-bg);
+	padding-bottom: 8px;
+}
+.vbo-roverview-table .vbo-overview-room-info .vbo-overview-alert {
+	display: inline-block;
+	margin-left: 10px;
+}
+.vbo-roverview-table .vbo-overview-room-info .vbo-overview-alert .badge {
+	border-radius: 50%;
+	padding: 0;
+	width: 24px;
+	height: 24px;
+	text-align: center;
+	line-height: 24px;	
 }
 .vbo-overv-sticky-table-head-off table.vboverviewtable th, .vbo-overv-sticky-table-head-off table.vboverviewtable td {
 	padding: 10px;
@@ -10941,9 +10967,23 @@ table.vboverviewtable td.vbo-cell-selected-middle-row-up {
 }
 .vbo-editbooking-room-pricetypes .vbo-editbooking-room-pricetype {
 	flex: 0 0 33%;
+	position: relative;
 }
 .vbo-editbooking-room-pricetypes .vbo-editbooking-room-pricetype-active {
 	border: 1px solid var(--vbo-green-color);
+}
+.vbo-editbooking-room-pricetypes .vbo-editbooking-room-pricetype label {
+	padding-right: 24px;
+}
+.vbo-editbooking-room-pricetypes .vbo-editbooking-room-pricetype .vbo-editbooking-room-pricetype-check {
+	position: absolute;
+	right: 10px;
+	top: 10px;
+}
+.vbo-editbooking-room-pricetypes .vbo-editbooking-room-pricetype .vbo-editbusy-custom-rate-element.vbo-editbusy-custom-rate-element-cancpolicy {
+	display: block;
+	margin-top: 6px;
+	max-width: 25rem;
 }
 .vbo-editbooking-room-services .vbo-editbooking-room-service {
 	flex: 0 0 33%;
@@ -15559,6 +15599,9 @@ table.adminform div.input-append {
 .vbo-grid-avcell > div.vbo-tableaux-booking-checkout {
 	border-right: 1px solid var(--vbo-config-title-color);
 }
+.vbo-tableaux-booking.vbo-booking-drag-preview {
+	min-width: fit-content !important;
+}
 .vbo-tableaux-booking.vbo-tableaux-booking-empty {
 	background: transparent;
 	display: inline-block;
@@ -15621,6 +15664,13 @@ table.adminform div.input-append {
 	display: inline-block;
 	width: 130px;
 	clip-path: inset( -100vw 0 -100vw -8px );
+}
+.vbo-tableaux-roombooks > .vbo-tableaux-booking-checkout > span {
+	max-width: 57px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+    overflow: hidden;
+    display: table-cell;
 }
 .vbo-tableaux-roombooks > .vbo-tableaux-booking-short .vbo-tableaux-booking-avatar, .vbo-grid-avcell > .vbo-tableaux-booking-short .vbo-tableaux-booking-avatar {
 	top: -5px;
@@ -15998,17 +16048,19 @@ table.adminform div.input-append {
 }
 
 /* Notification Center Menu */
-.vbo-menu-updates > button:hover, .vbo-notifications-center-container > button:hover {
+.vbo-menu-updates > button:hover, .vbo-notifications-center-container > button:hover, .vbo-menu-help-wizard-container > button:hover {
 	background: #9bc1d7;
 	color: #2a5166;
 }
-.vbo-notifications-center-container {
+.vbo-notifications-center-container, .vbo-menu-help-wizard-container, .vbo-menu-updates > button {
 	position: relative;
 	float: right;
 }
-.vbo-notifications-center-handler {
+.vbo-notifications-center-handler, .vbo-help-wizard-handler, .vbo-menu-updates > button.vbo-multitasking-apps {
 	float: right;
-  	display: inline-block;
+  	display: flex;
+  	align-items: center;
+  	justify-content: center;
   	background: #3f708b;
   	color: #fff;
   	font-weight: bold;
@@ -16016,10 +16068,47 @@ table.adminform div.input-append {
   	margin: 7px 8px 6px 2px;
 	width: 44px;
     height: 44px;
-    line-height: 36px;
     padding: 0;
     border-radius: 50%;
 	position: relative;
+}
+.vbo-menu-updates > button:hover, .vbo-notifications-center-container > button:hover {
+	background: #9bc1d7 !important;
+	color: #2a5166 !important;
+}
+.vbo-help-wizard-handler {
+	background: #900;
+  	border-color: #900;
+    animation: wizard-pulse 1.2s infinite ease-in-out,
+                 wizard-glow 2s infinite ease-in-out;
+}
+@keyframes wizard-pulse {
+      0%, 100% {
+        transform: scale(1);
+      }
+      50% {
+        transform: scale(1.1);
+      }
+    }
+
+    @keyframes wizard-glow {
+      0% {
+        box-shadow: 0 0 3px #f48f72, 0 0 6px #f48f72;
+      }
+      50% {
+        box-shadow: 0 0 5px #f48f72, 0 0 10px #f48f72;
+      }
+      100% {
+        box-shadow: 0 0 3px #f48f72, 0 0 6px #f48f72;
+      }
+    }
+.vbo-menu-help-wizard-container > button:hover {
+	background: #fff !important;
+	color: #900 !important;
+}
+.vbo-help-wizard-instruction-description ul {
+    list-style: disc;
+    padding: 0 0 0 20px;
 }
 .vbo-notifications-center-handler:not([data-badge-read=""]):after {
 	content: attr(data-badge-read);	
@@ -16058,7 +16147,7 @@ table.adminform div.input-append {
 	  transform: scale(1, 1);
 	}
 }
-.vbo-menu-updates .vbo-notifications-center-handler > i {
+.vbo-menu-updates .vbo-notifications-center-handler > i, .vbo-menu-updates .vbo-help-wizard-handler > i {
 	margin: 0;
 }
 .vbo-notifications-center-wrap {
@@ -20170,6 +20259,14 @@ div[id^="vbo-widget-reminders"] .vbo-reportwidget-filters .vbo-reportwidget-filt
 	object-fit: cover;
 	display: inline-block;
 	vertical-align: middle;	
+}
+
+/* Help Wizard */
+.vbo-help-wizard-instruction-description p:first-child {
+    margin-top: 0;
+}
+.vbo-help-wizard-instruction-description p:last-child {
+    margin-bottom: 0;
 }
 
 /* @end styles */
